Bug 1196412 - Correctly scale canvas layers that have a transform applied to fill the screen, r=vlad